Table "users" {
  "id" integer [pk, not null]
  "username" text [not null]
}

// ── Connectivity ─────────────────────────────────────────────────────
// Device is always WiFi-Direct GO. Credentials are known fixed values
// shipped via config/wifi-direct.json and seeded by DbSeeder on first boot.
Table "config_wifi_direct" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "enabled" boolean [not null, default: true]
  "ssid" text [not null]
  "passphrase" text [not null]
  "channel" integer [not null, default: 6]
  "ip_address" text

  checks {
    `channel > 0`
  }
}

Table "config_bluetooth" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "enabled" boolean [not null, default: true]
  "name" text [not null, default: 'sst-cam']
  "password" text [not null, default: 123456]
}

// ── Streaming destinations ───────────────────────────────────────────
// platform=6 (companion_app) is system-managed: a single seeded row per
// user with stream_key and url null. Other platforms require both.
Table "stream_config" {
  "id" integer [pk, not null]
  "user_id" integer [not null, ref: > "users"."id"]
  "platform" integer [not null, note: '0=youtube | 1=twitch | 2=facebook | 3=instagram | 4=tiktok | 5=custom | 6=companion_app']
  "name" text [not null]
  "enabled" boolean [not null, default: false]
  "stream_key" text
  "stream_type" integer [not null, default: 0, note: '0=rtmp | 1=rtmps']
  "url" text
  "codec" integer [not null, default: 0, note: '0=h264 | 1=h265']
  "width" integer [not null, default: 1920]
  "height" integer [not null, default: 1080]
  "framerate" integer [not null, default: 60]
  "bitrate_kbps" integer [not null, default: 4000]

  Indexes {
    (user_id, platform, name) [unique, name: "idx_stream_config_user_id_platform_name"]
    (user_id) [unique, name: "idx_stream_config_companion_singleton", note: 'WHERE platform = 6']
  }

  checks {
    `platform >= 0 AND platform <= 6`
    `platform = 6 OR (stream_key IS NOT NULL AND url IS NOT NULL)`
    `stream_type >= 0 AND stream_type <= 1`
    `codec >= 0 AND codec <= 1`
    `framerate > 0`
    `bitrate_kbps > 0`
    `width > 0`
    `height > 0`
  }
}

// ── Camera ───────────────────────────────────────────────────────────
Table "camera_config" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "exposure" integer [not null, default: 100]
  "gain" real [not null, default: 1]
  "white_balance" integer [not null, default: 0, note: '0=auto | 1=manual']
  "focus" integer [not null, default: 0, note: '0=auto | 1=manual']
  "width" integer [not null, default: 1920]
  "height" integer [not null, default: 1080]
  "format" integer [not null, default: 0, note: '0=YUV422']
  "fps" integer [not null, default: 60]
  "event_clip_pre_seconds" integer [not null, default: 60]
  "event_clip_post_seconds" integer [not null, default: 60]

  checks {
    `exposure > 0`
    `gain > 0`
    `fps > 0`
    `width > 0`
    `height > 0`
    `event_clip_pre_seconds > 0`
    `event_clip_post_seconds > 0`
  }
}

Table "camera_calibration" {
  "id" integer [pk, not null]
  "camera_id" integer [not null, note: '0 | 1']
  "intrinsic_matrix" blob [not null, note: 'JSON array, 3x3 flat']
  "distortion_coefficients" blob [not null, note: 'JSON array, 5 values']
  "calibrated_at" text [not null, default: `datetime(now)`]

  Indexes {
    (camera_id, calibrated_at) [name: "idx_camera_calibration_camera_id_calibrated_at"]
  }

  checks {
    `camera_id >= 0 AND camera_id <= 1`
  }
}

// ── Microphone ───────────────────────────────────────────────────────
Table "microphone_config" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "noise_reduction" boolean [not null, default: true]
}

Table "microphone_calibration" {
  "id" integer [pk, not null]
  "mic_id" integer [not null, note: '0 | 1']
  "sensitivity" real [not null, default: 1]
  "calibrated_at" text [not null, default: `datetime(now)`]

  Indexes {
    (mic_id, calibrated_at) [name: "idx_microphone_calibration_mic_id_calibrated_at"]
  }

  checks {
    `mic_id >= 0 AND mic_id <= 1`
    `sensitivity > 0`
  }
}

// ── Sports / teams / matches ─────────────────────────────────────────
// Sports + event kinds are runtime-mutable. The same physical sport
// ("soccer") may have multiple rows for different tournaments with
// different period structures. Tables ship empty on first boot.
Table "sport" {
  "id" integer [pk, not null]
  "code" text [not null, unique]
  "name" text [not null]
  "periods" integer [not null, note: '# of time segments per match (2 halves, 4 quarters, 3 sets, …)']

  checks {
    `periods > 0`
  }
}

Table "sport_event_kind" {
  "sport_id" integer [not null, ref: > "sport"."id"]
  "code" text [not null]
  "name" text [not null]

  Indexes {
    (sport_id, code) [pk]
  }
}

Table "team" {
  "id" integer [pk, not null]
  "sport_id" integer [not null, ref: > "sport"."id"]
  "name" text [not null]
  "short_name" text [not null]

  Indexes {
    (sport_id, name) [unique]
    (id, sport_id) [unique, note: 'composite key target for the FK from match']
  }
}

Table "player" {
  "id" integer [pk, not null]
  "team_id" integer [not null, ref: > "team"."id"]
  "name" text [not null]
  "jersey_number" integer

  Indexes {
    (team_id, jersey_number) [unique]
  }
}

Table "match" {
  "id" text [pk, not null, note: 'UUID']
  "user_id" integer [not null, ref: > "users"."id"]
  "sport_id" integer [not null, ref: > "sport"."id"]
  "team_a_id" integer [not null]
  "team_b_id" integer [not null]
  "name" text
  "started_at" text [not null]
  "ended_at" text
  "current_period" integer [not null, default: 1]
  "final_score_a" integer [not null, default: 0]
  "final_score_b" integer [not null, default: 0]

  Indexes {
    (user_id, started_at) [name: "idx_match_user_id_started_at"]
  }

  checks {
    `team_a_id != team_b_id`
    `current_period > 0`
    `final_score_a >= 0`
    `final_score_b >= 0`
  }
  // FOREIGN KEY (team_a_id, sport_id) REFERENCES team(id, sport_id)
  // FOREIGN KEY (team_b_id, sport_id) REFERENCES team(id, sport_id)
}

Table "match_event" {
  "id" text [pk, not null, note: 'UUID']
  "match_id" text [not null, ref: > "match"."id"]
  "sport_id" integer [not null]
  "event_code" text [not null]
  "period" integer [not null]
  "timestamp_in_match" real [not null, note: 'seconds since match.started_at']
  "wall_clock_at" text [not null]
  "metadata_json" text

  Indexes {
    (match_id, timestamp_in_match) [name: "idx_match_event_match_id_timestamp"]
  }

  checks {
    `period > 0`
    `timestamp_in_match >= 0`
  }
  // FOREIGN KEY (sport_id, event_code) REFERENCES sport_event_kind(sport_id, code)
}

// ── Recordings ───────────────────────────────────────────────────────
Table "recording" {
  "id" text [pk, not null, note: 'UUID']
  "match_id" text [ref: > "match"."id"]
  "kind" integer [not null, note: '0=full_game | 1=event_clip']
  "file_path" text [not null]
  "started_at" text [not null]
  "ended_at" text

  Indexes {
    (match_id, kind) [name: "idx_recording_match_id_kind"]
  }

  checks {
    `kind IN (0, 1)`
  }
}

Table "recording_segment" {
  "id" integer [pk, not null]
  "recording_id" text [not null, ref: > "recording"."id"]
  "sequence" integer [not null]
  "file_path" text [not null]
  "started_at" text [not null]
  "ended_at" text

  Indexes {
    (recording_id, sequence) [unique]
  }

  checks {
    `sequence >= 0`
  }
}

Table "event_clip" {
  "id" text [pk, not null, note: 'UUID, matches the "event_<uuid>" directory under <match_uuid>/']
  "match_event_id" text [not null, ref: > "match_event"."id"]
  "recording_id" text [not null, ref: > "recording"."id"]
  "file_path" text [not null]
  "pre_seconds" integer [not null]
  "post_seconds" integer [not null]

  checks {
    `pre_seconds > 0`
    `post_seconds > 0`
  }
}
